<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    android:paddingTop="44dp"
    android:paddingHorizontal="24dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/maison_neue_bold"
        android:text="@string/title_login_screen"
        android:textSize="22sp"
        android:textColor="?attr/colorOnBackground" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/maison_neue_book"
        android:text="@string/subtitle_login_screen"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:textColor="?attr/colorOutline" />

    <TextView
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/maison_neue_medium"
        android:text="@string/title_username"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_username"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:hintEnabled="false"
        app:startIconDrawable="@drawable/ic_round_person_24">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:hint="@string/hint_username"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/maison_neue_medium"
        android:text="@string/title_password"
        android:textColor="?attr/colorOnPrimaryContainer"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_password"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:endIconMode="password_toggle"
        app:hintEnabled="false"
        app:startIconDrawable="@drawable/ic_round_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/hint_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/maison_neue_demi"
        android:padding="17dp"
        android:text="@string/title_login"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

</LinearLayout>